--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,10 @@
-config.folder=${file.reference.denism-snake-config}
+config.folder=${file.reference.Denis-Makhlin-Snake-Finished-master-config}
+file.reference.Denis-Makhlin-Snake-Finished-master-config=config
+file.reference.Denis-Makhlin-Snake-Finished-master-public_html=public_html
+file.reference.Denis-Makhlin-Snake-Finished-master-test=test
 file.reference.denism-snake-config=config
 file.reference.denism-snake-public_html=public_html
 file.reference.denism-snake-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.denism-snake-public_html}
-test.folder=${file.reference.denism-snake-test}
+test.folder=${file.reference.Denis-Makhlin-Snake-Finished-master-test}
